Added gtest in ext, re-structured testing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,21 +1,63 @@
 # this is for emacs file handling -*- mode: cmake; indent-tabs-mode: nil -*-
-CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
+CMAKE_MINIMUM_REQUIRED(VERSION 2.8.8)
 
-PROJECT(xkcd_binpack)
+set(PROJECT_NAME_STR xkcd_binpack)
+project(${PROJECT_NAME_STR} C CXX)
+
+# The version number.
+set (Tutorial_VERSION_MAJOR 0)
+set (Tutorial_VERSION_MINOR 1a)
+
+set(CMAKE_INCLUDE_CURRENT_DIR_ON)
 
 
-SET(CMAKE_INCLUDE_CURRENT_DIR_ON)
+find_package(Threads REQUIRED)
 
 
+#-------------------
+# set common include folder for module
+#-------------------
+set(COMMON_INCLUDES ${PROJECT_SOURCE_DIR}/include)
+set(EXT_PROJECTS_DIR ${PROJECT_SOURCE_DIR}/ext)
+
+
+#-------------------
+# Module source
+#-------------------
+#set(PROJECT_LIB_NAME ${PROJECT_NAME_STR}_impl)
+
+#include_directories(${COMMON_INCLUDES})
+#file(GLOB SRC_FILES ${PROJECT_SOURCE_DIR}/src/*.cpp)
+#add_library(${PROJECT_LIB_NAME} ${SRC_FILES})
+
+add_subdirectory(${EXT_PROJECTS_DIR}/gtest)
+
+
+
+add_subdirectory(src/tinyxml2)
+
+add_subdirectory(src/xkcd_binpack)
+
+add_subdirectory(src/tools)
+
+#-------------------
+# Test
+#-------------------
 enable_testing()
+set(PROJECT_TEST_NAME ${PROJECT_NAME_STR}_test)
+include_directories(${GTEST_INCLUDE_DIRS} ${COMMON_INCLUDES})
 
-ADD_SUBDIRECTORY(src/tinyxml2)
+file(GLOB TEST_SRC_FILES ${PROJECT_SOURCE_DIR}/test/*.cpp)
+add_executable(${PROJECT_TEST_NAME} ${TEST_SRC_FILES})
+add_dependencies(${PROJECT_TEST_NAME} googletest)
 
-ADD_SUBDIRECTORY(src/xkcd_binpack)
 
-ADD_SUBDIRECTORY(src/tools)
+target_link_libraries(${PROJECT_TEST_NAME}
+  ${GTEST_LIBS_DIR}/libgtest.a
+  ${GTEST_LIBS_DIR}/libgtest_main.a
+)
 
-IF(BUILD_TESTS)
-  ADD_SUBDIRECTORY(src/test)
-ENDIF(BUILD_TESTS)
 
+target_link_libraries(${PROJECT_TEST_NAME} ${CMAKE_THREAD_LIBS_INIT})
+
+add_test(test1 ${PROJECT_TEST_NAME})
