Fixing project structure and linker error

--- a/src/tools/CMakeLists.txt
+++ b/src/tools/CMakeLists.txt
@@ -1,1 +1,5 @@
-#empty
+include_directories( ${xkcd_binpack_INCLUDE_DIRS} )
+
+add_executable(packer packer.cpp)
+
+target_link_libraries(packer xkcd_binpack)
